--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
     <!-- header iniziale con foto e titolo  -->
     <header>
-
+        <div class="pattern"></div>
+        <h1></h1>
+        <div> </div>
+        <div></div>
+        <img src="" alt="">
+        <img src="" alt="">
     </header>
     <!-- immagini  -->
     <section class="foto">
