--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <!-- header iniziale con foto e titolo  -->
     <header>
-        <div class="pattern"></div>
+        <div class="pattern"><img src="img/pattern.png" alt=""></div>
         <h1></h1>
         <div> </div>
         <div></div>
