--- a/index1.html
+++ b/index1.html
@@ -9,18 +9,24 @@
 <body>
     <!-- header iniziale con foto e titolo  -->
     <header>
-        <div class="pattern"><img src="'img/.pattern.png'" alt=""></div>
-        <h1></h1>
-        <div> </div>
-        <div></div>
-        <img src="" alt="">
-        <img src="" alt="">
+        <div class="pattern">
+            <img src="img/logo.svg" alt="" id="logo">
+        </div>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <div id="immaginiblock">
+            <strong>Scritto da <span class="grassetto">The blooleaner </span> </strong>
+            <div>il 10/10/2020</div>
+        </div>
+        <!-- blocco immagini  -->
+            <img src="img/tim-1.jpg" alt="tim 1">
+            <img src="img/tim-2.jpg" alt="tim 2">
     </header>
     <!-- immagini  -->
     <section class="foto">
         <img src="" alt="">
         <img src="" alt="">
-        <figcaption></figcaption>
+        <figcaption>Ist Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+            2nd Photo: Wikimedia, by Paul Clarke</figcaption>
     </section>
     <!-- sezione princilpale del programa contente il testo  -->
     <main>
