--- a/index1.html
+++ b/index1.html
@@ -17,14 +17,11 @@
             <strong>Scritto da <span class="grassetto">The blooleaner </span> </strong>
             <div>il 10/10/2020</div>
         </div>
-        <!-- blocco immagini  -->
-            <img src="img/tim-1.jpg" alt="tim 1">
-            <img src="img/tim-2.jpg" alt="tim 2">
     </header>
     <!-- immagini  -->
     <section class="foto">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="img/tim-1.jpg" alt="tim 1">
+        <img src="img/tim-2.jpg" alt="tim 2">
         <figcaption>Ist Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
             2nd Photo: Wikimedia, by Paul Clarke</figcaption>
     </section>
@@ -32,53 +29,74 @@
     <main>
         <!-- paragrafo 1 -->
         <section class="paragrafo 1">
-
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+                ad minim veniam, quis nostrud <span class="evidenziatore">exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex e commodo consequat</span> . Duis autem vel eum iriure dolor in hendrerit in
+                vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+                zzril delenit augue duis dolore te feugait nulla facilisi.</p>
         </section>
         <!-- lista puntata -->
         <section class="lista">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+                <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
+                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
             </ul>
         </section>
         <!-- tabella -->
         <section class="tabella">
             <table>
                 <thead>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr class="riga1">
+                        <td class="colonna1">Lorem ipsum dolor</td>
+                        <td class="colonna2">Lorem ipsum dolor</td>
+                        <td class="colonna3">Lorem ipsum dolor</td>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr class="riga2">
+                        <td class="colonna1">Lorem ipsum dolor</td>
+                        <td class="colonna2">Lorem ipsum dolor</td>
+                        <td class="colonna3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                            placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                            eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr class="riga3">
+                        <td class="colonna1">Lorem ipsum dolor</td>
+                        <td class="colonna2">Lorem ipsum dolor</td>
+                        <td class="colonna3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                            placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                            eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr class="riga4">
+                        <td class="colonna1">Lorem ipsum dolor</td>
+                        <td class="colonna2">Lorem ipsum dolor</td>
+                        <td class="colonna3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                            placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                            eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                     </tr>
                 </tbody>
             </table>
         </section>
         <!-- paragrafo 2 -->
-        <section class="paragrafo 2"></section>
+        <section class="paragrafo 2">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+                ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex e commodo consequat . Duis autem vel eum iriure dolor in hendrerit in
+                vulputate velit esse molestie consequat, vel <span class="evidenziatore">illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</span> odio dignissim qui blandit praesent luptatum
+                zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+        </section>
     </main>
     <!-- footer finale con foto -->
     <footer>
-        <h6></h6>
-        <img src="" alt="">
-        <img src="" alt="">
+        <h6>Potrebbe interessarti</h6>
+        <div class="img1">
+            <img src="img/monitor.jpg" alt="">
+            <div class="titoloimg"><storng>lorem ipsum dolor</storng></div>
+        </div>
+        <div class="img2">
+            <img src="img/graph.jpg" alt="">
+            <div class="titoloimg"><storng>lorem ipsum dolor</storng></div>
+        </div>
+        <div></div>
     </footer>
 </body>
 </html>
