--- a/bonus/indexbonus.html
+++ b/bonus/indexbonus.html
@@ -15,7 +15,7 @@
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
         <div id="immaginiblock">
             <strong>Scritto da <span class="grassetto">The blooleaner </span> </strong>
-            <div>il 10/10/2020</div>
+            <div id="data">il 10/10/2020</div>
         </div>
     </header>
     <!-- immagini  -->
